syntax = "proto3";

package v1.aspbv1;

import "v1/aspb/msg_anime_episode.proto";
import "v1/ashpb/anime_server.proto";
import "v1/nfpb/msg_meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message GetOptionalFullAnimeEpisodeRequest {
  int64         episodeID  = 1;
  int32         languageID = 2;
  optional bool withServer = 3;
  optional bool withSub    = 4;
  optional bool withDub    = 5;
}

message GetOptionalFullAnimeEpisodeResponse {
  AnimeEpisodeResponse     animeEpisode     = 1;
  nfpbv1.AnimeMetaResponse episodeMeta      = 2;
  optional int64           serverID         = 3;
  optional ashpbv1.AnimeSubDataResponse sub = 4;
  optional ashpbv1.AnimeDubDataResponse dub = 5;
}